Fix iframe calendars cut off
close #50

--- a/sites/all/themes/cas/sass/_main.scss
+++ b/sites/all/themes/cas/sass/_main.scss
@@ -1617,3 +1617,8 @@ body.page-node-47 #content #page-title
 		background: url(../images/back-to-top.png) no-repeat center top;
 	}
 }
+
+iframe.iframecalendar
+{
+	width:100%;
+}
